idf_component_register(SRCS "main.c" "src/uiT.c"
                                        "src/boilerT.c"
                                        "src/interruptsT.c"
                                        "src/controlT.c"
                                        "src/btT.c"
                    INCLUDE_DIRS "." "include")
